Replaced plumbing repair guides with maintenance guides
- Removed repair-focused content (leaky faucet, clogged drain, etc.)
- Created comprehensive plumbing maintenance guide
- Updated navigation to focus on maintenance categories
- Added seasonal care and water conservation sections

--- a/index.html
+++ b/index.html
@@ -27,11 +27,10 @@
                         <i class="fas fa-chevron-down"></i>
                     </button>
                     <div class="dropdown-content">
-                        <a href="pages/plumbing/leaky-faucet.html">Leaky Faucet</a>
-                        <a href="pages/plumbing/clogged-drain.html">Clogged Drain</a>
-                        <a href="pages/plumbing/running-toilet.html">Running Toilet</a>
-                        <a href="pages/plumbing/leaky-pipe.html">Leaky Pipe</a>
-                        <a href="pages/plumbing/low-pressure.html">Low Water Pressure</a>
+                        <a href="pages/plumbing/plumbing-maintenance.html">General Maintenance</a>
+                        <a href="pages/plumbing/water-conservation.html">Water Conservation</a>
+                        <a href="pages/plumbing/seasonal-care.html">Seasonal Care</a>
+                        <a href="pages/plumbing/preventive-tips.html">Preventive Tips</a>
                     </div>
                 </div>
 
@@ -126,7 +125,7 @@
                         <li><i class="fas fa-check"></i> Run water in unused sinks</li>
                         <li><i class="fas fa-check"></i> Test water pressure annually</li>
                     </ul>
-                    <a href="pages/plumbing/leaky-faucet.html" class="btn">Maintenance Guides</a>
+                    <a href="pages/plumbing/plumbing-maintenance.html" class="btn">Maintenance Guides</a>
                 </div>
 
                 <!-- Electrical Category -->
